<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/app_main"
        android:gravity="center">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_top_shop_cart_clear"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:text="@string/clear"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                tools:ignore="HardcodedText,RtlHardcoded" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/shopcart"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                tools:ignore="HardcodedText" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_top_shop_cart_remove_selected"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:text="@string/delete"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                tools:ignore="HardcodedText,RtlHardcoded" />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <com.zrp.latte.ec.main.cart.ShopCartNestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!-- 购物车数据-->
            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_shop_cart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!--猜你喜欢提示 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    android:layout_weight="3"
                    android:background="@color/bg_Gray" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/guessyoulike" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    android:layout_weight="3"
                    android:background="@color/bg_Gray" />
            </LinearLayout>

            <!-- 猜你喜欢数据-->
            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_you_like"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="8" />

            <!--去购物提示 -->
            <android.support.v7.widget.ViewStubCompat
                android:id="@+id/stub_no_item"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="8"
                android:background="@android:color/white"
                android:layout="@layout/stub_shop_cart_no_item"
                android:minHeight="50dp"
                android:orientation="horizontal" />
        </LinearLayout>
    </com.zrp.latte.ec.main.cart.ShopCartNestedScrollView>

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/ll_shop_cart_compat"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:minHeight="50dp"
        android:orientation="horizontal">

        <!--全选图标模块-->
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:minHeight="50dp"
            android:orientation="horizontal">

            <com.joanzapata.iconify.widget.IconTextView
                android:id="@+id/icon_shop_cart_select_all"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="{fa-check-circle}"
                android:textColor="@android:color/darker_gray"
                android:textSize="20sp" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/selectall"
                android:textColor="@color/app_main" />
        </android.support.v7.widget.LinearLayoutCompat>
        <!--全选部分结束-->

        <!--合计部分-->
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:minHeight="50dp"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/total"
                android:textColor="@android:color/darker_gray"
                tools:ignore="HardcodedText" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_shop_cart_total_price"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|left"
                android:text="￥0.01"
                android:textColor="@color/app_main"
                android:textSize="20sp"
                tools:ignore="HardcodedText,RtlHardcoded" />

        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_shop_cart_pay"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/app_main"
            android:gravity="center"
            android:text="@string/computer"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            tools:ignore="HardcodedText" />

    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v7.widget.LinearLayoutCompat>