<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:paddingTop="10dp"
        android:paddingRight="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_discount_backarrow"
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:src="@drawable/arrow_expend_left" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_weight="8"
                android:gravity="center_vertical|center"
                android:text="@string/editaddress"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/delete"
                android:layout_alignParentRight="true"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>

    </android.support.v7.widget.Toolbar>


    <EditText
        android:id="@+id/edit_address_edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:background="@null"
        android:textSize="15sp"
        android:inputType="" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_2dp"
        android:background="@color/app_background" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/edit_address_edit_phone"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="8"
            android:gravity="center_vertical"
            android:background="@null"
            android:paddingLeft="10dp"
            android:textSize="15sp"
            android:inputType="" />

        <com.joanzapata.iconify.widget.IconTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:text="{fa-angle-right}"
            android:textColor="@android:color/darker_gray"
            android:textSize="30sp" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_2dp"
        android:background="@color/app_background"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_address_edit_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:layout_marginLeft="10dp"
            android:paddingTop="5dp"
            android:gravity="center_vertical"
            android:textSize="15sp"
            android:singleLine="false"/>

        <com.joanzapata.iconify.widget.IconTextView
            android:id="@+id/icon_address_edit_pick"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:text="{fa-angle-right}"
            android:textColor="@android:color/darker_gray"
            android:textSize="30sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_25dp"
        android:background="@color/app_background"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:layout_marginLeft="10dp"
            android:paddingTop="13dp"
            android:layout_gravity="center_vertical"
            android:textSize="14dp"
            android:text="@string/setdefaultaddress"/>
        <android.support.v7.widget.SwitchCompat
            android:id="@+id/sc_address_edit_compat"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:checked="false"
            android:longClickable="false"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_2dp"
        android:background="@color/app_background"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:layout_marginLeft="10dp"
            android:paddingTop="13dp"
            android:layout_gravity="center_vertical"
            android:textSize="14dp"
            android:text="@string/addresstab"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="20dp"
            android:paddingTop="13dp"
            android:textSize="14dp"
            android:text="@string/more"/>
        <com.joanzapata.iconify.widget.IconTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:background="@color/white"
            android:gravity="center"
            android:text="{fa-angle-right}"
            android:textColor="@android:color/darker_gray"
            android:textSize="30sp" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_20dp"
        android:background="@color/app_background"
        />
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_address_edit_delete"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:textSize="15dp"
        android:textColor="@color/red"
        android:paddingLeft="15dp"
        android:background="@color/white"
        android:text="@string/deleteaddress"/>

    <LinearLayout
        android:id="@+id/ll_address_pick"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"/>
</LinearLayout>